--- a/hongitfront/src/App.css
+++ b/hongitfront/src/App.css
@@ -1,43 +1,22 @@
 .App {
   text-align: center;
-  background: black;
-  color: aqua;
-  font-size: 36px;
-  padding: 1rem;
-  font-weight: 600;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  background-color: #d5e8ac;
+  /* 폰트 */
+  font-family: Barlow;
+  font-size: 19px;
   color: white;
+  font-weight: 600;
+  padding: 1rem;
+
+  height: 100%;
+  width: 100%;
 }
 
-.App-link {
-  color: #61dafb;
+/* HONGIT 설정 */
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&display=swap');
+.mainLogo{
+  font-size: 250px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.address{
+  font-size: 20px;
 }
