--- a/hongit-front/src/main/Main.css
+++ b/hongit-front/src/main/Main.css
@@ -1,26 +1,12 @@
-
-.Main-logo {
-   
-  }
-
-  
-@media (prefers-reduced-motion: no-preference) {
-    .Main-logo {
-      animation: Main-logo-spin infinite 20s linear;
-    }
-  }
-
   
 .Main-header {
-    background-color: #282c34;
-    /* min-height: 100vh; */
+    /* background-color: #282c34; */
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     font-size: calc(10px + 2vmin);
     color: white;
-
-    width: 72.8%;
-    pointer-events: none;
+    
   }
